--- a/Frontend Practice/proj-4/index.html
+++ b/Frontend Practice/proj-4/index.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image from API</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
+<body>
     <div class="container">
 
         <div class="searchBar">
-            <input type="text">
+            <input id="inp" type="text">
             <button id="searchBtn">Search</button>
         </div>
 
-        <div class="imageContainer">
-            <img src="bg-buildings.jpg" alt="img-here">
-            <p id="img-description"></p>
+        <div class="imgs">
+            <!-- <div class="imageContainer">
+                <img src="bg-buildings.jpg" alt="img-here">
+                <br>
+                <p id="img-description">abc</p>
+            </div> -->
+
+            <div class="imageContainer2">
+                <img src="" class="imgInContainer" alt="img-here">
+                <p id="img-description"></p>
+            </div>
+
+
         </div>
 
     </div>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
